--- a/Views/Url/Create.cshtml
+++ b/Views/Url/Create.cshtml
@@ -1,21 +1,20 @@
-﻿@model LinkCompressor.Models.UrlItem
+﻿@model UrlItem
 
 <h4>Добавление нового URL</h4>
-<hr />
+<hr/>
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="LongUrl" class="control-label"></label>
-                <input asp-for="LongUrl" class="form-control" />
+                <input asp-for="LongUrl" class="form-control"/>
                 <span asp-validation-for="LongUrl" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary"/>
                 <a class="btn btn-primary bg-success" role="button" asp-action="Index">Отмена</a>
             </div>
         </form>
     </div>
 </div>
-
