--- a/Views/Url/Edit.cshtml
+++ b/Views/Url/Edit.cshtml
@@ -1,7 +1,7 @@
-﻿@model LinkCompressor.Models.UrlItem
+﻿@model UrlItem
 
 <h4>Редактирование URL</h4>
-<hr />
+<hr/>
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
@@ -13,14 +13,13 @@
             </div>
             <div class="form-group">
                 <label asp-for="LongUrl" class="control-label">URL-адрес</label>
-                <input asp-for="LongUrl" class="form-control" />
+                <input asp-for="LongUrl" class="form-control"/>
                 <span asp-validation-for="LongUrl" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Сохранить" class="btn btn-primary" />
+                <input type="submit" value="Сохранить" class="btn btn-primary"/>
                 <a class="btn btn-primary bg-success" role="button" asp-action="Index">Отмена</a>
             </div>
         </form>
     </div>
 </div>
-
